Typos sur les liens

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -57,7 +57,6 @@
  * Those pages are hosted
  *  - here on the Cr@ns network, http://perso.crans.org/besson;
  *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson;
- *  - and here at Python Hosted, http://pythonhosted.org/ANSIColors-balises/.
  *
  * This document is a Jinja Template, to modify all the HTML pages produced
  * by Sphinx. It have to be in the '.templates'.
@@ -74,9 +73,6 @@
         break;
     case 'www.dptinfo.ens-cachan.fr':
         my_id = 'UA-38514290-2';
-        break;
-    case 'pythonhosted.org':
-        my_id = 'UA-38514290-8';
         break;
     case 'naereen-corp.crans.org':
         my_id = 'ZOZO';
@@ -178,12 +174,12 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 pour collecter des statistiques, ce qui peut être désactivé via
 <a href="http://www.ghostery.com">Ghostery</a> par exemple.
 <br/>
-<a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="This site is optimized for Firefox." src="_images/.firefox_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="This site use Google Analytics." src="_images/.google_analytics_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Those pages are written with GNU Nano" src="_images/.made_with_nano_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="This site is an Open Source project, released with the GPLv3 License." src="_images/.opensource_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.python.org/download/"><img alt="This site used Python.." src="_images/.python_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="This site is made with Sphinx." src="_images/.sphinx_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="This site is made on Ubuntu 11.10." src="_images/.ubuntu_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox." src="_images/.firefox_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="Use Google Analytics." src="_images/.google_analytics_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Written with GNU Nano." src="_images/.made_with_nano_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="Those pages are an Open Source project, released with the GPLv3 License." src="_images/.opensource_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python powered :)" src="_images/.python_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx." src="_images/.sphinx_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 11.10." src="_images/.ubuntu_80_15.png" style="width: 80.0px; height: 15.0px;"></a>
 </div>
 {% endblock %}
