deux templates différents.

--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -13,8 +13,8 @@
   <li><a href="CV_Lilian_BESSON.html"
          rel="nofollow">Voir la version HTML</a>, compilée depuis LaTeX par pdf2html<br/></li>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis rST, en français</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français</li>
   <li><a href="CV_Lilian_BESSON.en.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis rST, en anglais</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en anglais</li>
 </ul>
 {%- endif %}
