tentative de rajouter des {{pathto('...', ', 1) }} pour permettre aux pages dans les sous-dossiers d'avoir quand même accès aux scripts et aux images

--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -1,17 +1,13 @@
 {%- if show_source and has_source and sourcename %}
-<h3>{{ _('My résumé in French or in English') }}</h3>
+<h3>{{ _('My résumé in French ?') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.fr.html"
          rel="nofollow">Consult the French version, in HTML</a></li>
-  <li><a href="CV_Lilian_BESSON.en.html"
-         rel="nofollow">Consult the English Version, in HTML</a></li>
 </ul>
 <h3>{{ _('My résumé in PDF') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex</li>
-  <li><a href="CV_Lilian_BESSON.html"
-         rel="nofollow">Go to the HTML version</a>, compiled from LaTeX with pdf2html<br/></li>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French</li>
   <li><a href="CV_Lilian_BESSON.en.pdf"
