--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -1,8 +1,6 @@
 {%- if show_source and has_source and sourcename %}
-<h3>{{ _('Mon CV en français ou en anglais') }}</h3>
+<h3>{{ _('Mon CV en anglais ?') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="CV_Lilian_BESSON.fr.html"
-         rel="nofollow">Voir la version française, en HTML</a></li>
   <li><a href="CV_Lilian_BESSON.en.html"
          rel="nofollow">Voir la version anglaise, en HTML</a></li>
 </ul>
@@ -10,8 +8,6 @@
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex</li>
-  <li><a href="CV_Lilian_BESSON.html"
-         rel="nofollow">Voir la version HTML</a>, compilée depuis LaTeX par pdf2html<br/></li>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français</li>
   <li><a href="CV_Lilian_BESSON.en.pdf"
