--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -90,7 +90,7 @@
   })();
 </script>
 <!-- <script type="text/javascript" src="{{ pathto('_static/simpleimagetrail.js', true)|e }}"></script> -->
-<script type="text/javascript" src="{{ pathto('_static/shotcuts.js', true)|e }}"></script>
+<script type="text/javascript" src="{{ pathto('_static/shortcuts.js', true)|e }}"></script>
 <!-- Thanks to :
  * http://www.openjs.com/scripts/events/keyboard_shortcuts/ (for the script)
  * http://questionablecontent.com (for the idea) -->
