--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -185,5 +185,6 @@ pour collecter des statistiques, ce qui peut être désactivé avec
 <a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python powered :)" src="{{ pathto('_images/.python_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
 <a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx 1.3" src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
 <a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 12.04.2" src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache 2.0" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
 </div>
 {% endblock %}
