--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -12,7 +12,7 @@
     <meta name="DC.Title" content="Lilian Besson sur le web" />
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
-    <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Cr@ns,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+" />
+    <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+" />
     <meta name="DC.Date" content="2013-28-07" />
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
@@ -57,7 +57,7 @@
  * This file layout.html is part of my web pages, generated with Sphinx.
  * 
  * Those pages are hosted
- *  - here on the Cr@ns network, http://perso.crans.org/besson (or http://besson.qc.to);
+ *  - here on the Crans network, http://perso.crans.org/besson (or http://besson.qc.to);
  *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson (or http://lbesson.qc.to);
  *  - here on Bitbucket, http://lbesson.bitbucket.org;
  *
