--- a/.templates/download.html
+++ b/.templates/download.html
@@ -3,6 +3,8 @@
 {% block body %}
  {% if last_updated %}
   <p><b>Dernière modification le : {{ last_updated }}.</b></p>
+ {% else %}
+  <p><b>Oups, il semblerait qu'il y ait un gros soucis avec ces pages... pas de last_updated !</b></p>
  {% endif %}
 <h2>Télécharger ces pages en PDF</h2>
  <p>Ces pages web sont générées avec <strong>Sphinx</strong>.
@@ -15,10 +17,10 @@ les fichiers PDF ainsi produits.</p>
  <p>Le dossier <a href="dl/">dl/</a> est là pour télécharger des archives, et des documents particuliers.</p>
  <p>L'accès à ce dossier nécessite un pseudo/mot de passe. Il est possible d'en demander un par email, si nécessaire, à l'adresse suivante <a href="mailto:naereen[@]crans[.]org?subject=[web-sphinx]">naereen[@]crans[.]org</a>.</p>
 <h2>Problèmes</h2>
-<p>Si vous rencontrez une difficulté quelconque ou que vous avez des questions,
+ <p>Si vous rencontrez une difficulté quelconque ou que vous avez des questions,
 veuillez utiliser la page <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a>.</p>
 <h2>À propos</h2>
-<p>Cette page est générée grâce à <strong>.templates/download.html</strong>,
+ <p>Cette page est générée grâce à <strong>.templates/download.html</strong>,
 un fichier de template Django.</p>
-<p>Cette page est inspirée de la documentation de Python.</p>
+ <p>Cette page est inspirée de la documentation de Python.</p>
 {% endblock %}
