--- a/.templates/download.html
+++ b/.templates/download.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'Téléchargement' %}
 {% block body %}
+<h1>À-propos de téléchargement</h1>
  {% if last_updated %}
   <p><b>Dernière modification le : {{ last_updated }}.</b></p>
  {% else %}
