bizarre ggle analytics marche moins bien.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -80,8 +80,8 @@
     case 'lbesson.bitbucket.org':
         my_id = 'UA-38514290-14';
         break;
-    case 'naereen-corp.crans.org':
-        my_id = 'ZOZO';
+    case 'besson.crans.org':
+        my_id = 'UA-38514290-1';
         break;
     default:
         break;
