--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -69,26 +69,45 @@
  * by hand all the produced HTML pages.
  * ( Google Analytics is a trademark of Google Inc.)
  *****************************************************************************/  
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
   var my_id = 'UA-38514290-1';
+  var my_domain = 'crans.org';
+
   switch(window.location.host) {
     case 'perso.crans.org':
         my_id = 'UA-38514290-1';
+        my_domain = 'crans.org';
         break;
     case 'www.dptinfo.ens-cachan.fr':
         my_id = 'UA-38514290-2';
+        my_domain = 'dptinfo.ens-cachan.fr';
         break;
     case 'lbesson.bitbucket.org':
         my_id = 'UA-38514290-14';
+        my_domain = 'bitbucket.org';
         break;
     case 'besson.crans.org':
         my_id = 'UA-38514290-1';
+        my_domain = 'crans.org';
         break;
     default:
         break;
   }
+
+  ga('create', my_id, my_domain);
+  ga('send', 'pageview');
+
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', my_id]);
+  _gaq.push(['_setDomainName', my_domain]);
+  _gaq.push(['_setAllowLinker', true]);
   _gaq.push(['_trackPageview']);
+
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
