--- a/.templates/sidebar_gpg.html
+++ b/.templates/sidebar_gpg.html
@@ -1,4 +1,4 @@
 <h3>{{ _('Ma clé publique PGP') }}</h3>
 <ul class="this-page-menu">
- <li><a class="reference external image-reference" href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0"><img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a></li>
+ <li><a class="reference external image-reference" href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0"><img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 </ul>
