--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -1,7 +1,7 @@
 {% extends "!layout.html" %}
 {% block rootrellink %}
  <li><img src="{{ pathto('_static/.besson.png', true)|e }}" alt=""
-  style="height:32px; width:32px; vertical-align: middle; margin-top: -1px"/></li>
+  style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></li>
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 {% endblock %}
 {% block extrahead %}
@@ -199,13 +199,13 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
 pour collecter des statistiques, ce qui peut être désactivé avec
 <a href="http://www.ghostery.com">Ghostery</a> par exemple.
 <br/>
-<a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 22.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="Use Google Analytics" src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Written with GNU Nano 2.3.2" src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="Those pages are an Open Source project, released with the GPLv3 License" src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python powered :)" src="{{ pathto('_images/.python_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx 1.3" src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 12.04.2" src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
-<a class="reference external image-reference" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache 2.0" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;"></a>
+<a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 22.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="Use Google Analytics" src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Written with GNU Nano 2.3.2" src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="Those pages are an Open Source project, released with the GPLv3 License" src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python powered :)" src="{{ pathto('_images/.python_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx 1.3" src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 12.04.2" src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+<a class="reference external image-reference" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache 2.0" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
 </div>
 {% endblock %}
