--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -3,14 +3,14 @@
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.fr.html"
          rel="nofollow">Consult the French version, in HTML</a></li>
-</ul>
+</ul></br>
 <h3>{{ _('My résumé in PDF') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.pdf"
-         rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex</li>
+         rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex</li></br>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
-         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French</li>
+         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French</li></br>
   <li><a href="CV_Lilian_BESSON.en.pdf"
-         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English</li>
+         rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English</li></br>
 </ul>
 {%- endif %}
