--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -2,15 +2,15 @@
 <h3>{{ _('Mon CV en anglais ?') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.en.html"
-         rel="nofollow">Voir la version anglaise, en HTML</a></li>
+         rel="nofollow">Voir la version anglaise, en HTML</a></li></br>
 </ul>
 <h3>{{ _('Mon CV en PDF') }}</h3>
 <ul class="this-page-menu">
   <li><a href="CV_Lilian_BESSON.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex</li></br>
   <li><a href="CV_Lilian_BESSON.fr.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français</li></br>
   <li><a href="CV_Lilian_BESSON.en.pdf"
-         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en anglais</li>
+         rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en anglais</li></br>
 </ul>
 {%- endif %}
