--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -1,13 +1,18 @@
 <h3>{{ _('Cette page sur un autre serveur ?') }}</h3>
 {% if pagename %}
-{{ pagename|e }}
+Nom de la page : {{ pagename|e }}
 {% endif %}
+
+{% if file_suffix %}
+Suffixe de la page : {{ file_suffix|e }}
+{% endif %}
+
 <ul class="this-page-menu">
  <script type="text/javascript">
   switch(window.location.host) {
     case 'jarvis.crans.org':
-        document.write("<br>Sur <a href=\"lbesson.qc.to\">lbesson.qc.to</a> ?\n");
-        document.write("<br>Sur besson.qc.to ?\n");
+        document.write("<br>Sur <a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a> ?\n");
+        document.write("<br>Sur <a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a> ?\n");
         break;
     case 'perso.crans.org':
         document.write("<br>Sur lbesson.qc.to ?\n");
@@ -18,13 +23,14 @@
         document.write("<br>Sur jarvis.crans.org ?\n");
         break;
     default:
-        document.write("<br>Error :(");
+        document.write("<br>Error, this page is hosted on an unknown location...");
         break;
   }
  </script>
  <noscript>
-   Essayez sur <a href="http://jarvis.crans.org/">jarvis.crans.org</a>.</br>
-   Essayez sur <a href="http://perso.crans.org/besson/">perso.crans.org/besson/</a>.</br>
-   Essayez sur <a href="http://www.dptinfo.ens-cachan.fr/~lbesson">www.dptinfo.ens-cachan.fr/~lbesson/</a>.</br>
+ JavaScript n'est pas activé ! La détection automatique du domaine utilisé n'est pas disponible...</br></br>
+  Essayez sur <a href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a>.</br>
+  Essayez sur <a href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a>.</br>
+  Essayez sur <a href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a>.</br>
  </noscript>
 </ul>
