--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -147,7 +147,8 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; 
+  /*  ga.src = 'http://www.google-analytics.com/ga.js'; */
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
@@ -238,21 +239,21 @@ pour collecter des statistiques, ce qui peut être désactivé avec
 <br/>
 <div id="supportBadges">
 <ul>
-<li><a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 22.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 23.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="Use Google Analytics" src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Written with GNU Nano 2.3.2" src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="Those pages are an Open Source project, released with the GPLv3 License" src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python powered :)" src="{{ pathto('_images/.python_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx 1.3" src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 12.04.2" src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="These pages are an Open Source project, released with the GPLv3 License" src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://www.python.org/download/"><img alt="Python 2.7.3 powered :)" src="{{ pathto('_images/.python_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://sphinx-doc.org/install.html"><img alt="Made with Sphinx 1.2b1" src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://www.ubuntu.com/about/about-ubuntu"><img alt="Made on Ubuntu 12.04.3 LTS" src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <script type="text/javascript">
  if (window.location.host == 'jarvis.crans.org')
  {
- document.write("<li><a class=\"reference external image-reference\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.1\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
+ document.write("<li><a class=\"reference external image-reference\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.1 on " + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
  }
  else
  {
- document.write("<li><a class=\"reference external image-reference\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
+ document.write("<li><a class=\"reference external image-reference\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on " + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
  }
 </script>
 <noscript>
