--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -1,38 +1,41 @@
-<h3>{{ _('Cette page sur un autre serveur ?') }}</h3>
-<!--
+<h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
+<!-- DEBUG
 {% if pagename %}
 Nom de la page : {{ pagename|e }}
 {% endif %}
-
 {% if file_suffix %}
 Suffixe de la page : {{ file_suffix|e }}
 {% endif %}
 -->
-
 <ul class="this-page-menu">
  <script type="text/javascript">
   switch(window.location.host) {
     case 'jarvis.crans.org':
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
         break;
     case 'perso.crans.org':
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
         break;
     case 'www.dptinfo.ens-cachan.fr':
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
-        document.write("<br>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
         break;
     default:
-        document.write("<br>Error, this page is hosted on an unknown location...");
+        document.write("<br/>Error, this page is hosted on an unknown location...");
         break;
   }
  </script>
  <noscript>
- JavaScript n'est pas activé ! La détection automatique du domaine utilisé n'est pas disponible...</br></br>
-  Essayez sur <span style=\"text-decoration:underline\"><a href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.</br>
-  Essayez sur <span style=\"text-decoration:underline\"><a href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.</br>
-  Essayez sur <span style=\"text-decoration:underline\"><a href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.</br>
+  JavaScript n'est pas activé !
+  La détection automatique du domaine utilisé n'est pas disponible...
+  </br></br>
+   Essayez sur <span style="text-decoration:underline"><a href="http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}">jarvis.crans.org</a></span>.
+   </br>
+   Essayez sur <span style="text-decoration:underline"><a href="http://perso.crans.org/besson/{{ pagename|e }}{{ file_suffix|e }}">perso.crans.org/besson/</a></span>.
+   </br>
+   Essayez sur <span style="text-decoration:underline"><a href="http://www.dptinfo.ens-cachan.fr/~lbesson/{{ pagename|e }}{{ file_suffix|e }}">www.dptinfo.ens-cachan.fr/~lbesson/</a></span>.
+   </br>
  </noscript>
 </ul>
