--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -1,10 +1,10 @@
 {%- if show_source and has_source and sourcename %}
-<h3>{{ _('Cette page en .txt et en .pdf') }}</h3>
+<h3>{{ _('Cette page en PDF ou en texte seul') }}</h3>
 <ul class="this-page-menu">
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
-        rel="nofollow">Voir la version PDF</a></li>
+        rel="nofollow">Voir la version PDF (expérimental)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
-        rel="nofollow">Voir le fichier source</a></li>
+        rel="nofollow">Voir le fichier source rST</a></li>
  <li><br/><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li>
 </ul>
 {%- endif %}
