--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -5,6 +5,6 @@
         rel="nofollow">Voir la version PDF (expérimental)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
         rel="nofollow">Voir le fichier source rST</a></li>
- <li><br/><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li>
+ <li><br><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li><br/>
 </ul>
 {%- endif %}
