--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -50,7 +50,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+" />
-    <meta name="DC.Date" content="2013-09-13" />
+    <meta name="DC.Date" content="2013-16-13" />
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
     <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
@@ -175,14 +175,14 @@
 
 <!-- External scripts -->
 <!-- <script type="text/javascript" src="{{ pathto('_static/simpleimagetrail.js', true)|e }}"></script> -->
-<script type="text/javascript" src="{{ pathto('_static/jquery.js', true)|e }}"></script>
+<!-- <script type="text/javascript" src="{{ pathto('_static/jquery.js', true)|e }}"></script> -->
 
 <!-- scrollUp plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
 <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
 <style type="text/css"> /* Image style */
 #scrollUp {
   bottom: 20px;
-  right:  20px;
+  left:   25px;
   height: 38px; /* Height of image */
   width:  38px; /* Width  of image */
   background: url({{ pathto('_images/.top.png', true)|e }}) no-repeat;
@@ -197,7 +197,7 @@ $(function () {
     animation: 'fade',          // Fade, slide, none
     animationInSpeed: 200,      // Animation in speed (ms)
     animationOutSpeed: 200,     // Animation out speed (ms)
-//  scrollText: 'Scroll to top',// Text for element
+    scrollText: '',// Text for element
     activeOverlay: false,       // Set CSS color to display scrollUp active point, e.g '#00FFFF'
   });
 });
